todoyu search changelog

search 1.2.0 - not released yet
	* Feature: Filter result sorting
	* Bugfix: Fixed empty exports caused by too long get-parameter (conditions)
	* Added: Limit parameter to filterset item fetching methods

search 1.1.2 - 2011-11-17
	* Bugfix: External filter methods were not called correct (not found)
	* Added: Newly added filter widgets are given focus
	* Changed: Namespace of filter-widget
	* Translation: Polish

search 1.1.1 - 2011-09-15
	* Added: Hooks: filterset.add, filterset.update, filterset.delete

search 1.1.0 - 2011-06-17
	* Bugfix: Dynamic foreign filtersets are not found anymore after big class rename session
	* Bugfix: Fixed date-time negation labels (renamed From/To => Before/After)
	* Bugfix: Fixed missing rights init/check methods in controllers
	* Feature: Added display of result items amount to search results in search area
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1
	* Changed: All classes are prefixed with extension name