@@ -2,14 +2,8 @@
 
 {block name="widgetbody"}
 	<input id="filterwidget-date-{$definitions.widgetID}" type="text" class="input date value" value="{$definitions.value}" onchange="Todoyu.Ext.search.Filter.updateConditionValue( '{$definitions.widgetID}', $F(this))"/>
-	<span id="filterwidget-date-{$definitions.widgetID}-button" class="icon calendaricon"></span>
+	<span id="filterwidget-date-{$definitions.widgetID}-calicon" class="icon calendaricon"></span>
 	<script type="text/javascript">
-		Calendar.setup({
-			inputField : "filterwidget-date-{$definitions.widgetID}", // id of the input field
-			range : [1990, 2020], // allowed years
-			ifFormat : "%d.%m.%Y", // format of the input field
-			button : "filterwidget-date-{$definitions.widgetID}-button", // trigger for the calendar (button ID)
-			firstDay : 1
-		});
+		{$jsSetup}
 	</script>
 {/block}
